--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@babel/core": "^7.26.9",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
+    "@reduxjs/toolkit": "^2.6.0",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "style-loader": "^4.0.0"
   },
   "devDependencies": {
